# Vision_Forge

./: .gitignore  pyproject.toml  setup_pod.sh
backend/: config.yaml
backend/app/: main.py
backend/core/: celery_app.py  config.py
backend/db/: models.py
backend/ml/: dataset.py  model.py
backend/routes/: annotation.py  inference.py  sampling.py  training.py  upload.py
backend/schemas/: annotation.py  config.py
backend/services/: annotation_service.py  inference_service.py  sampling_service.py  training_service.py  upload_service.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/pages/: AnnotationPage.jsx  ResultsPage.jsx  UploadPage.jsx
scripts/: test_annotation.py  test_client.py  test_inference.py  test_training.py
