[project]
name = "vision-forge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "celery>=5.6.3",
    "fastapi>=0.115.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "rfdetr[loggers,train]>=1.6.5.post0",
    "scikit-learn>=1.3.0",
    "timm>=1.0.26",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "uvicorn>=0.23.0",
]
