[project]
name = "vision-forge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=1.3.0,<2.0.0",
    "celery>=5.6.3",
    "fastapi>=0.115.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "rfdetr[loggers,train]==1.5.2",
    "scikit-learn>=1.3.0",
    "timm>=1.0.26",
    "torch==2.4.0+cu121",
    "torchvision==0.19.0+cu121",
    "pycocotools>=2.0.7",
    "supervision>=0.21.0",
    "uvicorn>=0.23.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
